HelloUltraviolet/Fixtures/RejectedSource/Modules/StaticMissingTypeAnnotation/Source/Main.uv
//! Rejected static declaration specimen for missing module-scope type annotation.

internal let STATIC_MISSING_TYPE = 1
